repos/emily-python/contents/test/parser/fail/setType2.em
# Set something not yet supported

# Arg: --ast2
# Expect failure

(.x) = 3
